--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/joy": "^5.0.0-alpha.77",
     "@mui/material": "^5.12.2",
     "@mui/x-data-grid": "^6.3.0",
     "axios": "^1.4.0",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "yup": "^1.1.1"
   },
