--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/joy": "^5.0.0-alpha.77",
     "@mui/material": "^5.12.2",
     "@mui/x-data-grid": "^6.3.0",
+    "@tanstack/react-query": "^4.29.5",
+    "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -26,6 +28,7 @@
     "react-hook-form": "^7.43.9",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
+    "swr": "^2.1.5",
     "yup": "^1.1.1"
   },
   "devDependencies": {
