--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/devtools": "^4.3.1",
@@ -18,11 +19,15 @@
     "@mui/joy": "^5.0.0-alpha.77",
     "@mui/material": "^5.12.2",
     "@mui/x-data-grid": "^6.3.0",
+    "@mui/x-date-pickers": "^6.3.1",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
