--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "npm": "^9.6.7",
     "or": "^0.2.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
+    "react-webcam": "^7.1.0",
     "swr": "^2.1.5",
     "yup": "^1.1.1"
   },
