--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "react-webcam": "^7.1.0",
+    "styled-components": "^5.3.11",
     "swr": "^2.1.5",
     "yup": "^1.1.1"
   },
