--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.43.9",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
+    "react-to-print": "^2.14.13",
     "react-webcam": "^7.1.0",
     "styled-components": "^5.3.11",
     "swr": "^2.1.5",
