print report added

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
+    "html2pdf.js": "^0.10.1",
     "i": "^0.3.7",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
@@ -37,7 +38,6 @@
     "react-hook-form": "^7.43.9",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
-    "react-to-print": "^2.14.13",
     "react-webcam": "^7.1.0",
     "styled-components": "^5.3.11",
     "swr": "^2.1.5",
