--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/x-date-pickers": "^6.3.1",
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
+    "@zoomus/websdk": "^2.13.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
@@ -39,6 +40,7 @@
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.10.0",
     "react-webcam": "^7.1.0",
+    "recharts": "^2.6.2",
     "styled-components": "^5.3.11",
     "swr": "^2.1.5",
     "yup": "^1.1.1"
